# VirtManager-Flash

./: .gitignore  LICENSE  README.md  TODO.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
mise-tasks/: build
public/spice/: spice.css
public/spice/src/: cursor.js  display.js  spicemsg.js  spicetype.js  utils.js
src/: App.css  App.tsx  translations.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: proxy_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: domains.rs  lib.rs  networks.rs  proxy.rs  storage.rs  system.rs
src-tauri/src/domains/: guest.rs  lifecycle.rs  manage.rs  mod.rs  settings.rs  snapshots.rs  types.rs  utils.rs  viewer.rs
src-tauri/tests/: connection.rs
src/components/: AboutModal.tsx  CloneVmModal.tsx  CreateVmWizard.tsx  MiniLineChart.tsx  PreferencesModal.tsx  ResourceManagerModal.tsx  SidebarHeader.tsx  VmBatchView.tsx  VmConsoleTab.tsx  VmContextMenu.tsx  VmList.tsx  VmSettingsTab.tsx  VmSnapshotsTab.tsx  VmStatusTab.tsx  VncConsole.tsx
src/styles/: design-system.css  details.css  preferences.css  settings.css  sidebar.css  wizard.css
src/types/: novnc.d.ts
