[package]
name = "virtmanager-flash"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "virtmanager_flash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
virt = { version = "0.4.3", features = ["qemu"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
# Allow patch version updates for security patches
tokio = { version = "1.38", features = ["full"] }
rand = "0.8"

# Optimized release profile (see https://v2.tauri.app/concept/size/)
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

